--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
+          newInstance = unityInstance;
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
@@ -104,21 +105,22 @@
       };
       document.body.appendChild(script);
     </script>
-     <script>
-      vkBridge.send('VKWebAppInit');
-      function showFullscrenAd() {
-      vkBridge.send('VKWebAppShowNativeAds',{ad_format:"interstitial"}).then(data => {
-        newInstance.SendMessage('VKSDK', 'OnInterstitialShown');});
-     }
-   </script>
-   
-   <script>
-     function showRewardedAd(id) {
-      vkBridge.send('VKWebAppShowNativeAds',{ad_format:"reward"}).then(data => {
-        newInstance.SendMessage('VKSDK', 'OnRewarded', id);
-        newInstance.SendMessage('VKSDK', 'OnRewardedClose', id);
-      })
-     }
-   </script>
+
+  <script>
+    vkBridge.send('VKWebAppInit');
+    function showFullscrenAd() {
+    vkBridge.send('VKWebAppShowNativeAds',{ad_format:"interstitial"}).then(data => {
+      newInstance.SendMessage('VKSDK', 'OnInterstitialShown');});
+  }
+  </script>
+
+  <script>
+  function showRewardedAd(id) {
+    vkBridge.send('VKWebAppShowNativeAds',{ad_format:"reward"}).then(data => {
+      newInstance.SendMessage('VKSDK', 'OnRewarded', id);
+      newInstance.SendMessage('VKSDK', 'OnRewardedClose', id);
+    })
+  }
+  </script>
   </body>
 </html>
