--- a/index.html
+++ b/index.html
@@ -105,23 +105,31 @@
       };
       document.body.appendChild(script);
     </script>
-     </script>
+     <script>
+      vkBridge.send('VKWebAppInit');
+      function showFullscrenAd() {
+      vkBridge.send('VKWebAppShowNativeAds',{ad_format:"interstitial"}).then(data => {
+        newInstance.SendMessage('VKSDK', 'OnInterstitialShown');});
+     }
+   </script>
+   
+   <script>
+     function showRewardedAd(id) {
+      vkBridge.send('VKWebAppShowNativeAds',{ad_format:"reward"}).then(data => {
+        newInstance.SendMessage('VKSDK', 'OnRewarded', id);
+        newInstance.SendMessage('VKSDK', 'OnRewardedClose', id);
+      })
+     }
 
-     <script>
-        vkBridge.send('VKWebAppInit');
-        function showFullscrenAd() {
-        vkBridge.send('VKWebAppShowNativeAds',{ad_format:"interstitial"}).then(data => {
-          newInstance.SendMessage('VKSDK', 'OnInterstitialShown');});
-       }
-     </script>
-     
-     <script>
-       function showRewardedAd(id) {
-        vkBridge.send('VKWebAppShowNativeAds',{ad_format:"reward"}).then(data => {
-          newInstance.SendMessage('VKSDK', 'OnRewarded', id);
-          newInstance.SendMessage('VKSDK', 'OnRewardedClose', id);
-        })
-       }
-     </script>
+     function AddToSideMenu()
+     {
+      vkBridge.send("VKWebAppAddToFavorites");
+     }
+
+     function InviteFriends()
+     {
+      vkBridge.send("VKWebAppShowInviteBox", {});
+     }
+   </script>
   </body>
 </html>
